feat: add achievement, stats, & leaderboard every users
